--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@google/model-viewer": "^4.0.0",
         "@tailwindcss/postcss": "^4.1.1",
         "tailwindcss": "^3.4.17",
+        "three": "^0.169.0",
         "vue": "^3.5.13"
     },
     "devDependencies": {
